--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="/favicon.png"
-    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
+    />
+    <meta
+      name="robots"
+      content="noindex"
+    />
+    <link
+      rel="icon"
+      href="/favicon.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
