Fix tags for SEO on some pages

--- a/index.html
+++ b/index.html
@@ -2,18 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+
+    <title>Innovamed Skoliozės centras Vilniuje ir Kaune</title>
+
+    <meta
+      name="description"
+      content="Innovamed klinikos Skoliozės centras - skoliozės gydymo klinika, padedanti vaikams ir suaugusiems gydyti bei koreguoti stuburo iškrypimą."
+    />
+
     <meta
       name="robots"
       content="noindex"
     />
+
     <link
       rel="icon"
       href="/favicon.png"
     />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -37,6 +48,7 @@
 
   <body>
     <div id="app"></div>
+
     <script
       type="module"
       src="/src/main.js"
