--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
     />
 
     <link
+      rel="shortcut icon"
+      href="/favicon.ico"
+    />
+
+    <meta
+      name="msapplication-TileColor"
+      content="#ffffff"
+    />
+
+    <meta
+      name="theme-color"
+      content="#ffffff"
+    />
+
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
