--- a/index.html
+++ b/index.html
@@ -36,23 +36,14 @@
     />
 
     <link
-      rel="manifest"
-      href="/site.webmanifest"
-    />
-
-    <link
       rel="icon"
+      type="image/png"
       href="/favicon.ico"
     />
 
-    <meta
-      name="msapplication-TileColor"
-      content="#ffffff"
-    />
-
-    <meta
-      name="theme-color"
-      content="#ffffff"
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
     />
 
     <link
